objects/Mfg_Release_Platforms__c.object
<CustomObject>
    <description>COS 2.0.This object will hold the releases and their platforms sent from the Manufacturing system.</description>
    <fields>
        <fullName>FCS_Date__c</fullName>
        <label>FCS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MFG External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Release_Version__c</fullName>
        <label>Mfg Release Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_RP_Id__c</fullName>
        <description>Delete after Migration</description>
        <formula>SUBSTITUTE(Release__r.Release_Name__c, &quot;REL &quot;, &quot;&quot;)   + &quot; - &quot; + Platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migration RP Id (DEL AFTER Migraiton)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Mg Release Platforms</relationshipLabel>
        <relationshipName>Mg_Release_Platforms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Mfg_Release_Platform</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mfg_Release_Platforms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mg Release Platforms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>